注册页面显示

--- a/dailyfresh_24/templates/register.html
+++ b/dailyfresh_24/templates/register.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="register_con">
 		<div class="l_con fl">
-			<a href="index.html" class="reg_logo"><img src="../static/images/logo02.png"></a>
+			<a href="../static/index.html" class="reg_logo"><img src="../static/images/logo02.png"></a>
 			<div class="reg_slogan">足不出户  ·  新鲜每一天</div>
 			<div class="reg_banner"></div>
 		</div>
@@ -19,7 +19,7 @@
 		<div class="r_con fr">
 			<div class="reg_title clearfix">
 				<h1>用户注册</h1>
-				<a href="login.html">登录</a>
+				<a href="../static/login.html">登录</a>
 			</div>
 			<div class="reg_form clearfix">
 				<form>
