--- a/dailyfresh_24/templates/register.html
+++ b/dailyfresh_24/templates/register.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
+	{% load staticfiles %}
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>天天生鲜-注册</title>
-	<link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../static/css/main.css">
-	<script type="text/javascript" src="../static/js/jquery-1.12.4.min.js"></script>
-	<script type="text/javascript" src="../static/js/register.js"></script>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/reset.css'%}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css'%}">
+	<script type="text/javascript" src="{% static 'js/jquery-1.12.4.min.js'%}"></script>
+	<script type="text/javascript" src="{% static 'js/register.js'%}"></script>
 </head>
 <body>
 	<div class="register_con">
 		<div class="l_con fl">
-			<a href="../static/index.html" class="reg_logo"><img src="../static/images/logo02.png"></a>
+			<a href="{% static 'index.html'%}" class="reg_logo"><img src="{% static 'images/logo02.png'%}"></a>
 			<div class="reg_slogan">足不出户  ·  新鲜每一天</div>
 			<div class="reg_banner"></div>
 		</div>
@@ -19,10 +20,12 @@
 		<div class="r_con fr">
 			<div class="reg_title clearfix">
 				<h1>用户注册</h1>
-				<a href="../static/login.html">登录</a>
+				<a href="{% static 'login.html'%}">登录</a>
 			</div>
 			<div class="reg_form clearfix">
-				<form>
+				<form method="post">
+				{% csrf_token %}
+
 				<ul>
 					<li>
 						<label>用户名:</label>
