用户登陆和退出

--- a/dailyfresh_24/templates/login.html
+++ b/dailyfresh_24/templates/login.html
@@ -25,14 +25,16 @@
 					<form method="post">
 						{% csrf_token%}
 						<input type="text" name="username" class="name_input" placeholder="请输入用户名">
-						<div class="user_error">输入错误</div>
+						<!--<div class="user_error">输入错误</div>-->
 						<input type="password" name="pwd" class="pass_input" placeholder="请输入密码">
-						<div class="pwd_error">输入错误</div>
+						<!--<div class="pwd_error">输入错误</div>-->
 						<div class="more_input clearfix">
-							<input type="checkbox" name="">
+							<input type="checkbox" name="remembered">
 							<label>记住用户名</label>
 						</div>
+						<div>{{ errmsg }}</div>
 						<input type="submit" name="" value="登录" class="input_submit">
+
 					</form>
 				</div>
 			</div>
