--- a/dailyfresh_24/templates/register.html
+++ b/dailyfresh_24/templates/register.html
@@ -54,10 +54,12 @@
 						<span class="error_tip2">提示信息</span>
 					</li>
 					<li class="reg_sub">
+						<div>{{ errmsg }}</div>
 						<input type="submit" value="注 册" name="">
 
 					</li>
-				</ul>				
+				</ul>
+
 				</form>
 			</div>
 
