用户模块完成，用户模块到商品模块过度

--- a/dailyfresh_24/templates/register.html
+++ b/dailyfresh_24/templates/register.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="register_con">
 		<div class="l_con fl">
-			<a href="{% static 'index.html'%}" class="reg_logo"><img src="{% static 'images/logo02.png'%}"></a>
+			<a href="{% url 'goods:index'%}" class="reg_logo"><img src="{% static 'images/logo02.png'%}"></a>
 			<div class="reg_slogan">足不出户  ·  新鲜每一天</div>
 			<div class="reg_banner"></div>
 		</div>
