--- a/dailyfresh_24/templates/login.html
+++ b/dailyfresh_24/templates/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="login_top clearfix">
-		<a href="{% static 'index.html'%}" class="login_logo"><img src="{% static 'images/logo02.png'%}"></a>
+		<a href="{% url 'goods:index'%}" class="login_logo"><img src="{% static 'images/logo02.png'%}"></a>
 	</div>
 
 	<div class="login_form_bg">
