--- a/dailyfresh_24/templates/base.html
+++ b/dailyfresh_24/templates/base.html
@@ -37,7 +37,7 @@
 					<span>|</span>
 					<a href="#">用户中心</a>
 					<span>|</span>
-					<a href="#">我的购物车</a>
+					<a href="{% url 'cart:info' %}">我的购物车</a>
 					<span>|</span>
 					<a href="#">我的订单</a>
 				</div>
@@ -55,7 +55,7 @@
             </form>
 		</div>
 		<div class="guest_cart fr">
-			<a href="#" class="cart_name fl">我的购物车</a>
+			<a href="{% url 'cart:info' %}" class="cart_name fl">我的购物车</a>
 			<div class="goods_count fl" id="show_count">{{ cart_num }}</div>
 		</div>
 	</div>
