--- a/dailyfresh_24/templates/static_index.html
+++ b/dailyfresh_24/templates/static_index.html
@@ -51,7 +51,7 @@
 	{% for category in goodscategorys %}
 		<div class="list_model">
 			<div class="list_title clearfix">
-				<h3 class="fl" id="model01">{{ category.name }}</h3>
+				<h3 class="fl" id="model0{{ forloop.counter }}">{{ category.name }}</h3>
 				<div class="subtitle fl">
 
 					<span>|</span>
