--- a/dailyfresh_24/templates/place_order.html
+++ b/dailyfresh_24/templates/place_order.html
@@ -1,66 +1,48 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>天天生鲜-提交订单</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-<body>
-	<div class="header_con">
-		<div class="header">
-			<div class="welcome fl">欢迎来到天天生鲜!</div>
-			<div class="fr">
-				<div class="login_info fl">
-					欢迎您：<em>张 山</em>
-				</div>
-				<div class="login_btn fl">
-					<a href="login.html">登录</a>
-					<span>|</span>
-					<a href="../templates/register.html">注册</a>
-				</div>
-				<div class="user_link fl">
-					<span>|</span>
-					<a href="user_center_info.html">用户中心</a>
-					<span>|</span>
-					<a href="cart.html">我的购物车</a>
-					<span>|</span>
-					<a href="user_center_order.html">我的订单</a>
-				</div>
-			</div>
-		</div>		
-	</div>
+{% extends 'base.html' %}
 
+{% load staticfiles %}
+
+{% block title %}天天生鲜-提交订单{% endblock %}
+
+{% block search_bar %}
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="images/logo.png"></a>
+		<a href="{% url 'goods:index' %}" class="logo fl"><img src="{% static 'images/logo.png' %}"></a>
 		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;提交订单</div>
 		<div class="search_con fr">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
+			<form action="/search/" method="get">
+            <input type="text" class="input_text fl" name="q" placeholder="搜索商品">
+            <input type="submit" class="input_btn fr" value="搜索">
+            </form>
 		</div>		
 	</div>
-	
+{% endblock %}
+
+{% block body %}
 	<h3 class="common_title">确认收货地址</h3>
 
 	<div class="common_list_con clearfix">
 		<dl>
 			<dt>寄送到：</dt>
-			<dd><input type="radio" name="" checked="">北京市 海淀区 东北旺西路8号中关村软件园 （李思 收） 182****7528</dd>
+			{% if address %}
+			<dd><input type="radio" name="address_id" value="{{address.id}}" checked="">{{address.receiver_name}} {{address.detail_addr}} {{address.receiver_mobile}}</dd>
+			{% else %}
+			<dd><input type="radio" name="address_id" value="" checked="">请添加地址</dd>
+			{% endif %}
 		</dl>
-		<a href="user_center_site.html" class="edit_site">编辑收货地址</a>
+		<a href="{% url 'users:address' %}" class="edit_site">编辑收货地址</a>
 
 	</div>
 	
 	<h3 class="common_title">支付方式</h3>	
 	<div class="common_list_con clearfix">
 		<div class="pay_style_con clearfix">
-			<input type="radio" name="pay_style" checked>
+			<input type="radio" name="pay_style" value="1" checked>
 			<label class="cash">货到付款</label>
-			<input type="radio" name="pay_style">
+			<input type="radio" name="pay_style" value="2">
 			<label class="weixin">微信支付</label>
-			<input type="radio" name="pay_style">
+			<input type="radio" name="pay_style" value="2">
 			<label class="zhifubao"></label>
-			<input type="radio" name="pay_style">
+			<input type="radio" name="pay_style" value="2">
 			<label class="bank">银行卡支付</label>
 		</div>
 	</div>
@@ -75,54 +57,35 @@
 			<li class="col04">数量</li>
 			<li class="col05">小计</li>		
 		</ul>
+		{% for sku in skus %}
 		<ul class="goods_list_td clearfix">
-			<li class="col01">1</li>			
-			<li class="col02"><img src="images/goods/goods012.jpg"></li>
-			<li class="col03">奇异果</li>
-			<li class="col04">500g</li>
-			<li class="col05">25.80元</li>
-			<li class="col06">1</li>
-			<li class="col07">25.80元</li>	
+			<li class="col01">{{forloop.counter}}</li>			
+			<li class="col02"><img src="{{ sku.default_image.url }}"></li>
+			<li class="col03">{{sku.name}}</li>
+			<li class="col04">{{sku.unit}}</li>
+			<li class="col05">{{sku.price}}元</li>
+			<li class="col06">{{sku.count}}</li>
+			<li class="col07">{{sku.amount}}元</li>
 		</ul>
-		<ul class="goods_list_td clearfix">
-			<li class="col01">2</li>			
-			<li class="col02"><img src="images/goods/goods003.jpg"></li>
-			<li class="col03">大兴大棚草莓</li>
-			<li class="col04">500g</li>
-			<li class="col05">16.80元</li>
-			<li class="col06">1</li>
-			<li class="col07">16.80元</li>	
-		</ul>
+		{% endfor %}
 	</div>
 
 	<h3 class="common_title">总金额结算</h3>
 
 	<div class="common_list_con clearfix">
 		<div class="settle_con">
-			<div class="total_goods_count">共<em>2</em>件商品，总金额<b>42.60元</b></div>
-			<div class="transit">运费：<b>10元</b></div>
-			<div class="total_pay">实付款：<b>52.60元</b></div>
+			<div class="total_goods_count">共<em>{{total_count}}</em>件商品，总金额<b>{{total_sku_amount}}元</b></div>
+			<div class="transit">运费：<b>{{trans_cost}}元</b></div>
+			<div class="total_pay">实付款：<b>{{total_amount}}元</b></div>
 		</div>
 	</div>
 
 	<div class="order_submit clearfix">
-		<a href="user_center_order.html" id="order_btn">提交订单</a>
+		<a href="javascript:;" id="order_btn">提交订单</a>
 	</div>	
+{% endblock %}
 
-	<div class="footer">
-		<div class="foot_link">
-			<a href="#">关于我们</a>
-			<span>|</span>
-			<a href="#">联系我们</a>
-			<span>|</span>
-			<a href="#">招聘人才</a>
-			<span>|</span>
-			<a href="#">友情链接</a>		
-		</div>
-		<p>CopyRight © 2016 北京天天生鲜信息技术有限公司 All Rights Reserved</p>
-		<p>电话：010-****888    京ICP备*******8号</p>
-	</div>
-
+{% block footer %}
 	<div class="popup_con">
 		<div class="popup">
 			<p>订单提交成功！</p>
@@ -130,21 +93,42 @@
 		
 		<div class="mask"></div>
 	</div>
-	<script type="text/javascript" src="js/jquery-1.12.2.js"></script>
+{% endblock %}
+
+{% block bottom_files %}
+	<script type="text/javascript" src="{% static 'js/jquery-1.12.2.js' %}"></script>
 	<script type="text/javascript">
 		$('#order_btn').click(function() {
-			localStorage.setItem('order_finish',2);
-
-			$('.popup_con').fadeIn('fast', function() {
-
-				setTimeout(function(){
-					$('.popup_con').fadeOut('fast',function(){
-						window.location.href = 'index.html';
-					});	
-				},3000)
-				
-			});
+		    // 地址id
+			var address_id = $('input[name="address_id"]').val();
+			if (address_id == "") {
+				alert("请先编辑收货地址!");
+			}
+			else {
+				var order_data = {
+					address_id: address_id,
+                    pay_method: $('input[name="pay_style"]:checked').val(),
+					sku_ids: "{{ sku_ids }}",
+                    csrfmiddlewaretoken: "{{ csrf_token }}"
+				};
+				$.post('/orders/commit', order_data, function(data){
+					if (1 == data.code) {
+                        location.href = '/users/login';
+                    } else if (6 == data.code) {
+						alert("库存不足，请修改订单！");
+					} else if (0 == data.code) {
+						$('.popup_con').fadeIn('fast', function() {
+							setTimeout(function(){
+								$('.popup_con').fadeOut('fast',function(){
+									location.href = '/orders/1';
+								});	
+							},3000)	
+						});
+					} else {
+					    alert(data.message);
+                    }
+				});
+			}
 		});
 	</script>
-</body>
-</html>
+{% endblock %}
